Refactor user update service method and add user profile picture upload process
