# book-network-api/src/main/java/com/dev/kei/book/network/api/user/UserService.java
@@ -4,14 +4,21 @@ import com.dev.kei.book.network.api.book.Book;
 import com.dev.kei.book.network.api.book.BookRepository;
 import com.dev.kei.book.network.api.file.FileStorageService;
 import com.dev.kei.book.network.api.file.FileUtils;
+import com.dev.kei.book.network.api.security.JwtService;
 import com.dev.kei.book.network.api.transactionHistory.BookTransactionRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.BadCredentialsException;
+import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
+import java.util.Objects;
 
 @Service
 @RequiredArgsConstructor
@@ -20,7 +27,9 @@ public class UserService {
     private final UserMapper userMapper;
     private final FileStorageService fileStorageService;
     private final BookRepository bookRepository;
-    private final BookTransactionRepository bookTransactionRepository;
+    private final JwtService jwtService;
+    private final PasswordEncoder passwordEncoder;
+
 
     public User save(User user) {
         return userRepository.save(user);
@@ -41,18 +50,41 @@ public class UserService {
     }
 
     public UserResponse updateLoginUser(UserRequest request, Authentication authentication) {
+        Map<String, Object> claims = new HashMap<>();
+        UserResponse userResponse = new UserResponse();
+
         // Get authenticated user
         User user = (User) authentication.getPrincipal();
 
         if (user == null) {
-            throw new BadCredentialsException("User cannot get from JWT token");
+            throw new BadCredentialsException("Cannot get user from JWT token");
         }
         // Update user properties
+        user.setId(request.getId());
         user.setFirstName(request.getFirstName());
         user.setLastName(request.getLastName());
-        user.setEmail(request.getEmail());
         user.setBio(request.getBio());
-        user.setPassword(request.getPassword());
+
+        // If user email and password are changed, generate jwt token again
+        if (!Objects.equals(user.getEmail(), request.getEmail()) ||
+                !Objects.equals(user.getPassword(), request.getPassword())) {
+            // Update the email
+            if (!Objects.equals(user.getEmail(), request.getEmail())) {
+                user.setEmail(request.getEmail());
+            }
+            // Update the password
+            if (!Objects.equals(user.getPassword(), request.getPassword())) {
+                user.setPassword(passwordEncoder.encode(request.getPassword()));
+            }
+
+            // Add login user fullName to claim to use in token
+            claims.put("fullName", user.getFullName());
+            claims.put("userId", user.getId());
+
+            // Generate new token with user updated information
+            String token = jwtService.generateToken(claims, user);
+            userResponse.setUpdatedJWT(token);
+        }
 
         // If profile picture exist in request
         if (request.getProfilePicture() != null) {
@@ -62,7 +94,20 @@ public class UserService {
                 user.setProfilePicture(filename);
             }
         }
-        return userMapper.toUserResponse(userRepository.save(user));
+
+        // Map from user to user response
+        userResponse.setId(user.getId());
+        userResponse.setFirstName(user.getFirstName());
+        userResponse.setLastName(user.getLastName());
+        userResponse.setBio(user.getBio());
+        userResponse.setEmail(user.getEmail());
+        userResponse.setCreatedAt(user.getCreatedAt());
+        userResponse.setUpdatedAt(user.getUpdatedAt());
+
+        // Save user data changes
+        userRepository.save(user);
+        // Return user response payload
+        return userResponse;
     }
 
     public void deleteLoginUser(Authentication authentication) {
