# book-network-ui/src/app/services/models/feedback.ts
@@ -1,13 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-import { Book } from '../models/book';
-export interface Feedback {
-  book?: Book;
-  comment?: string;
-  createdAt?: string;
-  createdBy?: number;
-  id?: number;
-  lastModifiedAt?: string;
-  lastModifiedBy?: number;
-  rate?: number;
-}
