# book-network-ui/src/app/services/models/granted-authority.ts
@@ -1,5 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-export interface GrantedAuthority {
-  authority?: string;
-}
