# book-network-ui/src/app/services/models/role.ts
@@ -1,8 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-export interface Role {
-  createdAt?: string;
-  id?: number;
-  name?: string;
-  updatedAt?: string;
-}
