# book-network-ui/src/app/services/models/user-response.ts
@@ -1,16 +1,13 @@
 /* tslint:disable */
 /* eslint-disable */
-import { Book } from '../models/book';
-import { Role } from '../models/role';
 export interface UserResponse {
   bio?: string;
-  books?: Array<Book>;
   createdAt?: string;
   email?: string;
   firstName?: string;
   id?: number;
   lastName?: string;
   profilePicture?: Array<string>;
-  roles?: Array<Role>;
   updatedAt?: string;
+  updatedJWT?: string;
 }
