# book-network-ui/src/openAPI/openAPI.json
@@ -90,6 +90,44 @@
         }
       }
     },
+    "/me/profile-upload": {
+      "post": {
+        "tags": [
+          "Users"
+        ],
+        "operationId": "uploadProfilePicture",
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "required": [
+                  "file"
+                ],
+                "type": "object",
+                "properties": {
+                  "file": {
+                    "type": "string",
+                    "format": "binary"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/feedbacks": {
       "post": {
         "tags": [
@@ -926,11 +964,14 @@
         "required": [
           "email",
           "firstName",
-          "lastName",
-          "password"
+          "lastName"
         ],
         "type": "object",
         "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
           "firstName": {
             "type": "string"
           },
@@ -954,254 +995,6 @@
               "type": "string",
               "format": "byte"
             }
-          }
-        }
-      },
-      "Book": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "createdAt": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "lastModifiedAt": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "createdBy": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "lastModifiedBy": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "title": {
-            "type": "string"
-          },
-          "author": {
-            "type": "string"
-          },
-          "isbn": {
-            "type": "string"
-          },
-          "synopsis": {
-            "type": "string"
-          },
-          "coverImage": {
-            "type": "string"
-          },
-          "archived": {
-            "type": "boolean"
-          },
-          "shareable": {
-            "type": "boolean"
-          },
-          "owner": {
-            "$ref": "#/components/schemas/User"
-          },
-          "feedbacks": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Feedback"
-            }
-          },
-          "bookTransitionHistories": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/BookTransactionHistory"
-            }
-          },
-          "rates": {
-            "type": "number",
-            "format": "double"
-          }
-        }
-      },
-      "BookTransactionHistory": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "createdAt": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "lastModifiedAt": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "createdBy": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "lastModifiedBy": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "user": {
-            "$ref": "#/components/schemas/User"
-          },
-          "book": {
-            "$ref": "#/components/schemas/Book"
-          },
-          "returned": {
-            "type": "boolean"
-          },
-          "returnApprove": {
-            "type": "boolean"
-          }
-        }
-      },
-      "Feedback": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "createdAt": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "lastModifiedAt": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "createdBy": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "lastModifiedBy": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "rate": {
-            "type": "number",
-            "format": "double"
-          },
-          "comment": {
-            "type": "string"
-          },
-          "book": {
-            "$ref": "#/components/schemas/Book"
-          }
-        }
-      },
-      "GrantedAuthority": {
-        "type": "object",
-        "properties": {
-          "authority": {
-            "type": "string"
-          }
-        }
-      },
-      "Role": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "name": {
-            "type": "string"
-          },
-          "createdAt": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "updatedAt": {
-            "type": "string",
-            "format": "date-time"
-          }
-        }
-      },
-      "User": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "firstName": {
-            "type": "string"
-          },
-          "lastName": {
-            "type": "string"
-          },
-          "email": {
-            "type": "string"
-          },
-          "bio": {
-            "type": "string"
-          },
-          "profilePicture": {
-            "type": "string"
-          },
-          "password": {
-            "type": "string"
-          },
-          "roles": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Role"
-            }
-          },
-          "books": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Book"
-            }
-          },
-          "bookTransitionHistories": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/BookTransactionHistory"
-            }
-          },
-          "createdAt": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "updatedAt": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "name": {
-            "type": "string"
-          },
-          "enabled": {
-            "type": "boolean"
-          },
-          "fullName": {
-            "type": "string"
-          },
-          "accountLocked": {
-            "type": "boolean"
-          },
-          "accountNonExpired": {
-            "type": "boolean"
-          },
-          "accountNonLocked": {
-            "type": "boolean"
-          },
-          "authorities": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/GrantedAuthority"
-            }
-          },
-          "username": {
-            "type": "string"
-          },
-          "credentialsNonExpired": {
-            "type": "boolean"
           }
         }
       },
@@ -1231,18 +1024,6 @@
               "format": "byte"
             }
           },
-          "roles": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Role"
-            }
-          },
-          "books": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Book"
-            }
-          },
           "createdAt": {
             "type": "string",
             "format": "date-time"
@@ -1250,6 +1031,9 @@
           "updatedAt": {
             "type": "string",
             "format": "date-time"
+          },
+          "updatedJWT": {
+            "type": "string"
           }
         }
       },
